# beautiful-pdfs

./: LICENSE.txt  README.md  pyproject.toml
src/new_project/: __about__.py  __init__.py  styles.css  template.html
src/new_project/template/: styles.css  template.html
tests/: __init__.py
